# clawdi

./: .gitignore  README.md  docker-compose.yml  package.json
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b50ac3f7b87_add_memories_table.py  2988624e6be5_add_skills_scope_id.py  672acd66fc7d_add_session_content_hash_and_content_.py  6a6bb7b46a4f_add_memory_search_indexes.py  78eeade62ac3_add_scope_invitations.py  7ac3349475ec_add_memory_embedding.py  a3d1f2e4b567_add_skill_file_count.py  affdc1ac78ec_add_scope_id_to_memories_and_vaults.py  b1c152248aa6_add_personal_scope_flag_and_default_.py  c1d99ac4f9e6_clawdi_serve_v1_schema.py  d236d6dedde8_add_invitee_email_to_scope_invitations.py  db14af31fb6f_add_scopes_scope_memberships_agent_.py  e5cb994425a4_skill_scopes_and_memory_scopes_m2m.py  e81a04e870b4_widen_memory_embedding_to_768.py  f972e0fac9ef_add_device_authorizations.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  scope.py
backend/app/middleware/: body_size_limit.py  security_headers.py
backend/app/models/: api_key.py  device_authorization.py  env_scope.py  memory.py  memory_scope.py  scope.py  scope_invitation.py  (+5 more)
backend/scripts/: backfill_session_content_hash.py  dedupe_resume_chains.py  embed_memories.py  seed_serve_test.py
backend/tests/: conftest.py  test_auth_keys.py  test_body_size_limit.py  test_cli_auth_device_flow.py  test_scope_isolation.py  test_sessions.py  test_settings_and_mcp.py  test_skills.py  test_sync_events.py  test_sync_heartbeat.py  test_vault.py
(+126 files in other folders)
